styles/main.css
/* margin strip + housekeeping */
body {
	margin: 0px;
}

body, html {
	width: 100%;
}

.clear {
	clear:both;
}

a {
	text-decoration: none;
	font-family: "Raleway";
}

ul, p {
	font-family: "Raleway";
}

.mobile-only {
	display: none;

}

/*header stuff*/


header {
	width: 100%;
	height: 10px;
	background-color: white;
}

.header-links {
	list-style-type: none;
	margin:0px;
	line-height: 35px;
	float:right;
	width: 400px;
	margin-right: 5px;
	color:black;
}

.links {
	font-family: "Raleway";
	display:inline-block;
	line-height: 70px;
	font-size: .5em;
	margin-left: 7%;
}

/*main body*/

.splash {
	background-image: url("computer.jpg");
	background-attachment: fixed;
	background-size:cover;
	position: relative;
	height: 100%;
}

.splash2 {
	width: 100%;
	height: 500px;
	background-image: url("bridge.JPG");
	background-size: cover;
	background-attachment: fixed;
	text-align: center;
	color:white;
	font-size: 3.5em;
	font-size: "Raleway";
}

.splash3 {
	height:500px;
	background-image: url("citysky.jpg");
	background-size: cover;
	background-attachment: fixed;
}

.splash3 .title {
	margin: 0;
	padding-top: 35px;
	font-size: 6.5em;
	color:black;
	font-family: "Raleway";
}

.splash3 p {
	color: white;
	line-height: 1.25em;
	font-size: 1.2em;
	font-family: "Oxygen";
}

.CTA {
	color:white;
	border: 1px solid white;
	background-color: rgba(0,0,0,0);
	width: 235px;
	height: 60px;
	line-height: 56px;
	font-size: .42em;
	border-radius: 10px;
	font-family: "Raleway";
	float:right;
	text-align: center;
	transition: background-color .5s, color .5s;

}

.CTA:hover {
	background-color:white;
	color: gray;
	cursor: pointer;
}

.subtitle {
	font-size: .65em;
	font-family: "Nothing You Could Do";
}

.asterisk {
	font-family: "Nothing You Could Do";
	margin-left: -20px;
}

.greeting {
	padding-top: 25px;
	font-size: 6em;
	padding-left: 10%;
	line-height: .1em;
	color:white;
	font-family: "Raleway";
	padding-bottom: 10px;
	position:fixed;
	z-index: 2;
}


article {
	height: 235px;
	background-color: white;
	line-height: 1.5em;
	z-index: 3;
	position:relative;
}

article a {
	color: #0000f5;
	transition: color 1s;
}

article a:hover {
	color:black;
}


.text {
	margin-top: 60px;
	margin-right: auto;
	margin-left: auto;
}


/*project tab stuff*/

.project {
	text-align: center;
	height: 250px;
	border: 1px solid red;
}

.project-info {
	display:none;
}

/* resume stuff*/

.resume {
	width:100%;
	background-color: white;
	color:black;
	padding: 50px;
	border-top: 2px solid gray;
	position: relative;
	z-index: 4;
	font-family: "Oxygen";
}

.resume .subtitle {
	font-size: 2.25em;
}

.resume p, ul {
	font-size: 1.1em;
	line-height: 1.25em;
}

.resume h2 {
	color:#1b265b;
	font-family: "Raleway";
}

.resume h3 {
	margin-top: 10px;
	line-height: 1.5em;
	margin-bottom: 30px;
	font-family: "Raleway";
}

.resume a {
	color:#0000f5;
}

#contact-form h1 {
	color: #1b265b;
	font-size: 2.5em;
	padding-top: 50px;
	padding-bottom: 20px;
	padding-left: 10%; 
}

#contact-form {
	font-family: "Raleway";
}

#contact-form h2 {
	color:white;
	margin-top: 25px;
	margin-bottom: 10px;
}

#contact-form label {
	color:white;
	font-family: "Raleway";
	font-size: 1.4em;
}

#contact-form .error {
	color:red;
}

#contact-form textarea {
	height: 150px;
}

.button {
	margin-bottom: 35px;
	font-family: "Raleway";
	background-color: #1b265b;
}

.button:hover {
	background-color: #0000f5;
}

#loading {
	color:white;
	font-size: 1.1em;
	font-family: "Raleway";
	padding-bottom: 50px;
}

#success {
	font-family: "Raleway";
	font-size: 1.1em;
	color:white;
	margin-left: 20px;
	margin-right: 20px;
	padding-bottom: 50px;

}

/*footer stuff*/

footer {
	border-top: 15px solid #1b265b;
	width: 100%;
	position: relative;
	color:white;
	background-color: #282828;
}

.footer-text {
	color:white;
	padding-bottom: 10px;
	margin-left: 15px;
}

/*mobile-specific stylings*/
@media (max-width: 800px) {


}

@media (max-width: 600px) {

	.mobile-only {
		display:block;
	}

	.name, .header, .header-links {
		display: none;
	}

	.links {
		margin: 8px;
	}

	.greeting p {
		padding-top: 0px;
	}

	article {
		margin-right: 25px;
		margin-left: 25px;
	}

	article p {
		margin-top: 10px;
		line-height: 1.25em;
	}

	.resume {
		padding: 30px;
		margin-right: auto;
		margin-left: auto;
		font-size: .8em;
	}

	.contact h2 {
		font-size: 1em;
	}

	.signoff {
		color: #B20018;
		font-size: .5em;
	}


	form {
		margin-left: 10px;
		margin-right: 10px;
	}





}

